<resources>
    <string name="app_name">Math Tutor</string>
    <string name="title">WELCOME TO MATH TUTOR</string>
    <string name="quadratic_equation">QUADRATIC EQUATION</string>
    <string name="quadratic_equation_title">Quadratic Equation</string>
    <string name="Explanation">This calculator works by using the value of the coefficients of \'x\' a and b, and the constant c. i.e ax2 + bx + c. let\'s assuming we have an equation 3x2 + 2x - 6, the coefficient of x2 is 3, the coefficient of x is 2 and the constant c is -6......Take note of the negative or positive signs.</string>
    <string name="simultaneous_equation">SIMULTANEOUS EQUATION</string>
    <string name="probability">PROBABILITY</string>
    <string name="button">Button</string>
    <string name="quadratic_equations">Quadratic Equations</string>
    <string name="show_workings">Show Workings</string>
    <string name="enter_the_coefficient_of_x2_i_e_a">Enter the coefficient of X2 i.e \'a\':</string>
    <string name="textviewcoffofx">Enter the coefficient of X i.e \'b\':</string>
    <string name="textviewcoffofconstant">Enter the value of the constant i.e \'c\':</string>
    <string name="textviewanswer">Answer:</string>
    <string name="btncalculate">Calculate</string>
    <string name="imaginaryroots">Imaginary roots</string>
    <string name="textviewshowworkings">TextView</string>
    <string name="title_activity_workings">Workings</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_showworkings">showworkings</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="step_4">Step 4</string>
    <string name="step_1_Sol">"First Step\nConverting your data back to a quadratic\n$acu x\u00B2 $bcv x $ccv = 0"</string>
    <string name="step_5">Step 5</string>
    <string name="step_6">Step 6</string>
    <string name="step_7">Step 7</string>
    <string name="simultaneous_equation_btn">Simultaneous Equation</string>
    <string name="simul_instruc_first_data">Enter the data for the first equation</string>
    <string name="simul_instruc_second_data">Enter the data for the second equation</string>
    <string name="btnSimulCalc">calculate</string>
    <string name="button_simul_show_working">show working</string>
    <string name="work_fragment">WorkFragment</string>
    <string name="back"><![CDATA[<- BACK]]></string>

</resources>
