<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".Tabbed">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewStep1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewStep3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewStep4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewStep5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewStep6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_6"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewStep7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_7"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_workings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.815" />
</androidx.constraintlayout.widget.ConstraintLayout>